--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello sir</title>
 </head>
-<body>
+<body b;>
     
 </body>
 </html>
